[package]
name = "knowledge"
version = "0.1.0"
description = "Knowledge — Web Research Agent. Crawls, analyses, and stores trading/market knowledge into the memory system via HTTP API."
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
scraper = "0.27"
url = "2"
futures = "0.3"
itertools = "0.13"
